src/ty/snapshots/tvm__ty__tests__extern_type_cons_not_callable.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n        extern type T;\n        T();\n    \"#)"
---
error: "T" may not be constructed directly, because it is an external type
2 |  T();
  |  ^

