src/ty/snapshots/tvm__ty__tests__unit_not_callable.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n        (do {})();\n    \"#)"
---
error: type "()" is not callable
1 |  (do {})();
  |   ^^^^^


